--- a/clase22-react/src/App.css
+++ b/clase22-react/src/App.css
@@ -1,38 +1,38 @@
-.App {
+body{
+  margin: 0;
+  padding: 0;
+}
+header{
+  background-color: #1e70da;
+  color: white;
+  padding: 20px 0;
+}
+header h1{
+  margin: 0;
+}
+
+nav{
+  background-color: #2aafcc;
+  margin-bottom: 20px;
+}
+
+nav ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+nav ul li{
+  flex-grow: 1;
+}
+nav ul li a{
+  color: white;
+  text-decoration: none;
+  padding: 3px 6px;
+  display: block;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.galeria{
+  max-width: 960px;
+  margin: 0 auto 30px;
 }
